--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="style.css">
     
-    <title>React App</title>
+    <title>Muarif quiz
+    </title>
   </head>
   <body>
     
